--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
+
 version: '3.1'
 
 services:
   db:
-    image: postgres:13.1
+    image: postgres:12.9
     privileged: true
     ports:
       - 5432:5432
@@ -11,15 +12,16 @@ services:
       POSTGRES_PASSWORD: 1
       POSTGRES_DB: db
   backend:
-    build: ./library
+    build: ./drf_project
     privileged: true
     ports:
       - 8080:8080
+
     command:
       bash -c "
       python manage.py migrate &&
       python manage.py create_project &&
-      gunicorn library.wsgi -b 0.0.0.0:8080  
+      gunicorn drf_project.wsgi -b 0.0.0.0:8080  
       "
     depends_on:
       - db
